# komga-reader

./: .gitignore  .gitlab-ci.yml  CLAUDE.md  CONTRIBUTING.md  NOTICE  README.md  build.gradle.kts  settings.gradle.kts
.claude/.cache/: unit-test-reviewer.marker
.claude/rules/: animation-gating.md  architecture-seams.md  big-picture-and-goals.md  eink-design-language.md  roadmap-and-invariants.md  shared-structure-before-variants.md  source-agnostic-integration.md  source-extensibility.md
.github/workflows/: ci.yml  integration.yml  release.yml
.understand-anything/: .understandignore  fingerprints.json  knowledge-graph.json  meta.json
app/: build.gradle.kts
data/: build.gradle.kts
docs/: ARCHITECTURE.md  PROJECT-STATUS.md  retro-2026-06-10-ui-collections.md
docs/architektur/: 01-overview.excalidraw  02-viewer-comic-cutter.excalidraw  03-seam-a-sources.excalidraw  04-seam-b-render-eink.excalidraw  05-plugin-system.excalidraw  06-modular-ui.excalidraw  README.md  build-diagrams.mjs
docs/domain/: viewer-type-resolution.md
docs/mockups/: detail-redesign.html  settings-redesign.html  tabs-redesign.html
docs/plugin/: color-preset-format.md
docs/ui-packs/: README.md
domain/: build.gradle.kts
eink-onyx/: build.gradle.kts
gradle/: libs.versions.toml  verification-metadata.xml
guided-view/: build.gradle.kts
plugin-api/: build.gradle.kts
plugin-host/: build.gradle.kts
plugin-sdk/: build.gradle.kts
plugins/: README.md
plugins/_template-data/: README.md
render-core/: build.gradle.kts
render-crengine/: .gitignore  build.gradle.kts
render-crengine/native/: .gitignore  PROVENANCE.md  build-crengine.sh
render-crengine/src/main/cpp/: CMakeLists.txt  cr3_bridge.cpp  jnigraphicslib.cpp  jnigraphicslib.h  lvcolordrawbufex.cpp  lvcolordrawbufex.h
source-api/: build.gradle.kts
source-komga/: build.gradle.kts
source-local/: build.gradle.kts
source-opds/: build.gradle.kts
tools/ci/: emulator-down.sh  emulator-up.sh
tools/ci-fixtures/: .gitignore  PROVENANCE.md  README.md  docker-compose.yml  down.sh  freeze-from-nas.sh  gen-fixtures.py  manifest.json  seed-kavita.sh  seed.sh  up.sh  verify.sh
tools/content-type-calibration/: calibrate.py
tools/crengine/: LICENSE-SCAN-NG.md  LICENSE-SCAN.md  scan-license.sh
tools/e2e/: app_smoke.sh
tools/icons/: README.md  generate.mjs  (+3 more)
ui-api/: build.gradle.kts
(+808 files in other folders)
